--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
                         <h4>Company</h4>
                         <a href="/home/index">Home</a><br/>
                         <a href="/aboutus/index">About</a><br/>
+                        <a href="/dev_api/index">Developer Central<br/>API Reference</a><br/>
                         <a href="/contact/index">Contact</a><br/>
                         <a href="/team/index">Team</a><br/>
                         <a href="#">Careers</a><br/>
