--- a/app/views/layouts/_slidebar.html.erb
+++ b/app/views/layouts/_slidebar.html.erb
@@ -36,6 +36,9 @@
                 <a href="/aboutus/index">About us</a>
             </li>
             <li>
+                <a href="/dev_api/index">Developer Central<br/>API Reference</a>
+            </li>
+            <li>
                 <a href="/faq/index">FAQ</a>
             </li>
             <li>
