--- a/app/views/dev_api/_check_card_balance_api.html.erb
+++ b/app/views/dev_api/_check_card_balance_api.html.erb
@@ -1,7 +1,7 @@
 <div class="wp-block default user-form no-margin">
 
         <div class="form-header">
-            <h2>Update Cause</h2>
+            <h2>Check Card Balance</h2>
         </div>
 
 
@@ -16,11 +16,11 @@
                             
                             <p>
 
-                                This operation updates an existing cause.
+                                This operation returns the current balance on the gift card.
                                 <br/><br/>
                                 <b>HTTP method:</b> POST
                                 <br/><br/>
-                                <b>URL:</b> https://www.changefindr.com/api/update_cause
+                                <b>URL:</b> https://www.changefindr.com/api/check_card_balance
 
                                 <br/><br/>
                                 
@@ -68,76 +68,41 @@
                                 </tr>
 
                                 <tr>
-                                 <td><span>causeId</span></td>
+                                 <td><span>merchantId</span></td>
                                  <td><span>Integer</span></td>
                                  <td>Y</td>
-                                 <td><span>Unique identifier of cause.</span></td>
+                                 <td><span>Unique identifier of merchant of the gift card.  This list is retrieved by using the Get Gift Cards service.</span></td>
                                 </tr>
-                               
+
                                 <tr>
-                                 <td><span>causeName</span></td>
+                                 <td><span>cardNumber</span></td>
                                  <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>Name/Title of cause.  Max 100 characters.</span></td>
+                                 <td>Y</td>
+                                 <td><span>Gift Card Number</span></td>
                                 </tr>
 
                                 <tr>
-                                 <td><span>causeURL</span></td>
+                                 <td><span>cardPin</span></td>
                                  <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>URL of cause.  Must be in format http://www.mycause.com</span></td>
+                                 <td>Y</td>
+                                 <td><span>Pin of gift card.</span></td>
                                 </tr>
 
                                 <tr>
-                                 <td><span>causeFacebookURL</span></td>
+                                 <td><span>expirationDate</span></td>
+                                 <td><span>Date</span></td>
+                                 <td>N</td>
+                                 <td><span>Expiration date of gift card.  Format is MM/DD/YYYY</span></td>
+                                </tr>
+
+                                <tr>
+                                 <td><span>transactionId</span></td>
                                  <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>Facebook URL of cause.  Must be in format http://www.facebook.com/mycause</span></td>
+                                 <td>Y</td>
+                                 <td><span>Customer transaction id</span></td>
                                 </tr>
 
-                                <tr>
-                                 <td><span>causeDescription</span></td>
-                                 <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>Description of cause.  Description can be in HTML format.  Max 5000 characters.</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeLogo</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Logo image for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeImage1</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Image 1 for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeImage2</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Image 2 for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeImage3</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Image 3 for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>isListed</span></td>
-                                 <td><span>Bool</span></td>
-                                 <td>N</td>
-                                 <td><span>This will determine whether the cause will be listed on Changefindr's website or not.  Values: true or false</span></td>
-                                </tr>
-
-
+                              
                                 </tbody>
                                 </table>
 
@@ -154,10 +119,22 @@
                                 </tr>
 
                                 <tr>
-                                 <td><span>causeId</span></td>
+                                 <td><span>giftCardId</span></td>
                                  <td><span>Integer</span></td>                                 
                                  <td><span>The cause Id assigned by changefindr.  Reference this ID in other API calls to make updates to the cause and get additional information about donations.</span></td>
-                                </tr>                               
+                                </tr>     
+
+                                <tr>
+                                 <td><span>actualCardValue</span></td>
+                                 <td><span>Float</span></td>                                 
+                                 <td><span>The current balance on card.</span></td>
+                                </tr> 
+
+                                <tr>
+                                 <td><span>exchangeCardValue</span></td>
+                                 <td><span>Float</span></td>                                 
+                                 <td><span>Dollar amount Changefindr will reiumburse partner.</span></td>
+                                </tr>
 
                                 </tbody>
                                 </table>
@@ -178,7 +155,50 @@
                                  <td><span>401</span></td>
                                                                
                                  <td><span>Unauthorized access.  Either the api key or host trying to access the service is invalid.</span></td>
-                                </tr>                               
+                                </tr>   
+
+                                <tr>
+                                 <td><span>401</span></td>
+                                                               
+                                 <td><span>There was an error processing your request.  Please try again later or contact support@changefindr.com for assistance.</span></td>
+                                </tr> 
+
+                                <tr>
+                                 <td><span>401</span></td>
+                                                               
+                                 <td><span>The card was not found.  Either the card number or pin are invalid.</span></td>
+                                </tr> 
+
+                                <tr>
+                                 <td><span>401</span></td>
+                                                               
+                                 <td><span>The pin entered is not valid.</span></td>
+                                </tr>
+
+                                <tr>
+                                 <td><span>401</span></td>
+                                                               
+                                 <td><span>The merchant is not valid.</span></td>
+                                </tr> 
+
+                                 <tr>
+                                 <td><span>401</span></td>
+                                                               
+                                 <td><span>The gift card is expired.</span></td>
+                                </tr> 
+
+                                <tr>
+                                 <td><span>401</span></td>
+                                                               
+                                 <td><span>There was a problem with your gift card.  Please contact support@changefindr.com for assistance.</span></td>
+                                </tr> 
+
+                                 <tr>
+                                 <td><span>401</span></td>
+                                                               
+                                 <td><span>There was a problem with your gift card.  Please contact support@changefindr.com for assistance.</span></td>
+                                </tr> 
+
 
                                 </tbody>
                                 </table>
