--- a/app/views/dev_api/_get_cause_api.html.erb
+++ b/app/views/dev_api/_get_cause_api.html.erb
@@ -1,7 +1,7 @@
 <div class="wp-block default user-form no-margin">
 
         <div class="form-header">
-            <h2>Update Cause</h2>
+            <h2>Get Cause</h2>
         </div>
 
 
@@ -16,11 +16,11 @@
                             
                             <p>
 
-                                This operation updates an existing cause.
+                                This operation returns information about your cause.
                                 <br/><br/>
-                                <b>HTTP method:</b> POST
+                                <b>HTTP method:</b> REQUEST
                                 <br/><br/>
-                                <b>URL:</b> https://www.changefindr.com/api/update_cause
+                                <b>URL:</b> https://www.changefindr.com/api/get_cause
 
                                 <br/><br/>
                                 
@@ -73,71 +73,7 @@
                                  <td>Y</td>
                                  <td><span>Unique identifier of cause.</span></td>
                                 </tr>
-                               
-                                <tr>
-                                 <td><span>causeName</span></td>
-                                 <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>Name/Title of cause.  Max 100 characters.</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeURL</span></td>
-                                 <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>URL of cause.  Must be in format http://www.mycause.com</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeFacebookURL</span></td>
-                                 <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>Facebook URL of cause.  Must be in format http://www.facebook.com/mycause</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeDescription</span></td>
-                                 <td><span>String</span></td>
-                                 <td>N</td>
-                                 <td><span>Description of cause.  Description can be in HTML format.  Max 5000 characters.</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeLogo</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Logo image for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeImage1</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Image 1 for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeImage2</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Image 2 for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>causeImage3</span></td>
-                                 <td><span>Image File</span></td>
-                                 <td>N</td>
-                                 <td><span>Image 3 for cause.  Must be either in jpg or png format.  File size < 5 megs</span></td>
-                                </tr>
-
-                                <tr>
-                                 <td><span>isListed</span></td>
-                                 <td><span>Bool</span></td>
-                                 <td>N</td>
-                                 <td><span>This will determine whether the cause will be listed on Changefindr's website or not.  Values: true or false</span></td>
-                                </tr>
-
-
+                              
                                 </tbody>
                                 </table>
 
@@ -157,7 +93,86 @@
                                  <td><span>causeId</span></td>
                                  <td><span>Integer</span></td>                                 
                                  <td><span>The cause Id assigned by changefindr.  Reference this ID in other API calls to make updates to the cause and get additional information about donations.</span></td>
-                                </tr>                               
+                                </tr>     
+
+                                <tr>
+                                 <td><span>causeName</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>The name of the cause</span></td>
+                                </tr> 
+
+                                <tr>
+                                 <td><span>causeURL</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>Website of cause</span></td>
+                                </tr>
+
+                                <tr>
+                                 <td><span>causeFacebookURL</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>Facebook URL of cause</span></td>
+                                 </tr> 
+
+                                 <tr>
+                                 <td><span>causeDescription</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>Description of cause.  Returned in HTML format.</span></td>
+                                 </tr>
+
+                                 <tr>
+                                 <td><span>logo</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>URL of logo image</span></td>
+                                 </tr>  
+
+                                 <tr>
+                                 <td><span>image1</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>URL of image 1</span></td>
+                                 </tr>
+
+                                 <tr>
+                                 <td><span>image2</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>URL of image 2</span></td>
+                                 </tr>  
+
+                                <tr>
+                                 <td><span>image3</span></td>
+                                 <td><span>String</span></td>                                 
+                                 <td><span>URL of image 3</span></td>
+                                 </tr>
+
+                                 <tr>
+                                 <td><span>createdDate</span></td>
+                                 <td><span>Date Timestamp</span></td>                                 
+                                 <td><span>Date the cause was created</span></td>
+                                 </tr>
+
+                                 <tr>
+                                 <td><span>modifiedDate</span></td>
+                                 <td><span>Date Timestamp</span></td>                                 
+                                 <td><span>Date the cause was modified</span></td>
+                                 </tr>
+
+                                 <tr>
+                                 <td><span>accountId</span></td>
+                                 <td><span>Integer</span></td>                                 
+                                 <td><span>Unique account identifier of API access company.</span></td>
+                                 </tr>
+
+                                 <tr>
+                                 <td><span>isApproved</span></td>
+                                 <td><span>Boolean</span></td>                                 
+                                 <td><span>Is this cause approved to accept donations?  values: true or false.</span></td>
+                                 </tr>  
+
+                                 <tr>
+                                 <td><span>isListed</span></td>
+                                 <td><span>Boolean</span></td>                                 
+                                 <td><span>Is this cause listed on www.changefindr.com?  values: true or false.</span></td>
+                                 </tr>   
+
 
                                 </tbody>
                                 </table>
