updated team and front pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,13 +107,17 @@
                             <div class="col-md-12" style="display: inline-block;text-align: center;">
                                 <h5 class="title" style="text-align:center;font-size: 30px;">Featured Cause<br/>
                                      <img src="<%=featuredCause.logo.url%>" class="img-responsive" alt="" style="display:inline-block">
-                                    <a href="/cause/show/177">Nepal Earthquake Relief By NAG</a>
+                                    <a href="/cause/show/177">South County Outreach</a>
                                      <br/> </h5>
 
                                 <br/>
-                                <p style="font-size: 15px;">Dear Respected Community Members and friends of Nepal, We are very deeply saddened by the tragedy and damages of epic proportion that the recent earthquake caused in our motherland Nepal. Our community deeply grieves over the loss of life in particular, and for those that will continue to have to endure further suffering in coming days and months. The entire Nepalese Association of Georgia (NAG) community, while we mourn and pray, offer our heartfelt condolences and sympathies to the bereaved families affected by this natural disaster. Historic buildings in Kathmandu lay in rubble on the ground. The injured are being treated outside hospitals in chaotic scenes.<a href="/cause/show/177">Read More...</a>
+                                <p style="font-size: 15px;">Homeless And Hunger Prevention<br/>
+
+South County Outreach Provides Housing Programs And Professional Case Management Services To Orange County People Who Are Homeless Or On The Verge Of Being Homeless. The Goal Is To Break The Cycle Of Poverty And Get Clients Back On The Road To Self-Sufficiency. 
+
+<a href="/cause/show/186">Read More...</a>
                                 </p>
-                                <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button" onclick="location.href='/donate/new/?charityid=177'">
+                                <button id="register_button" class="btn btn-base btn-icon btn-icon-right btn-sign-in" type="button" onclick="location.href='/donate/new/?charityid=186'">
                                                         <span>Donate Partially-Used Gift Card</span>
                                     </button>
                                 <br/><br/>
@@ -305,7 +309,7 @@
 
 
 
-<!-- Check gift card balance -->
+<!-- Check gift card balance
 <section class="prlx-bg inset-shadow-1" data-stellar-ratio="2" style="padding: 50px 0; background-image: url('/assets/sections/section-bg-2.jpg'); background-position: 0 -400px;">
         <div class="mask mask-2"></div>
         <div class="wp-section">
@@ -328,6 +332,7 @@
             </div>
         </div>
 </section>
+-->
    
 <!-- Congratulations Coderdojo -->   
 <section id="companyCarousel" class="carousel carousel-2 slide bg-white bb" data-ride="carousel">
@@ -348,7 +353,7 @@
                                 
                             </div>
                             <div class="col-md-6">
-                                <img src="<%= CLOUDFRONT_HOST %>/images/photo_attachment/39/original/CoderCamp01.jpg" class="img-responsive" alt="">
+                                <img src="/images/CoderDojo_image1.png" class="img-responsive" alt="">
                             </div>
                         </div>
                     </div>
