--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -57,14 +57,14 @@
                                 -->
                 			</div>
                 		</div>
-                		<h3 class="title-lg">Vipul Bhavsar</h3>
+                		<h3 class="title-lg">Mike B.</h3>
                 		<p>
-                			Vipul has experience as the software architect and lead programmer for a large IT Company. Prior to this he has been the senior software developer and architect for eXcelon corporations. He has also worked as a consultant on various programming projects for the US Navy and Tibco. Vipul has a Bachelor’s from the University of California and a Masters from USC, both in Computer Science. He is also a Project Management Professional (PMP).
+                			Mike has experience as the software architect and lead programmer for a large IT Company. Prior to this he has been the senior software developer and architect for eXcelon corporations. He has also worked as a consultant on various programming projects for the US Navy and Tibco. Mike has a Bachelor’s and Master's from the University of California both in Computer Science. He is also a Project Management Professional (PMP).
                 		</p>
                 		
                 	</div>
                 	<div class="col-md-3">
-                		<img src="<%= CLOUDFRONT_HOST %>/images/VipulProfilePic.jpg" class="img-responsive" style="max-height:309px" alt="">
+                		<img src="/images/temp/avatar3.png" class="img-responsive" style="max-height:309px" alt="">
                 	</div>
                 </div>
                 <hr>
@@ -105,20 +105,9 @@
             	   <h3 class="section-title left"><span>ADVISORS</span></h3>
                 </div>
                 <div class="row">   
-                	<div class="col-md-4">
-                        <div class="wp-block inverse">
-                            
-                            <h2>Jawad Ansari<small>CEO GCube Capital</small></h2><br/>
-                            <p>
-                            18 years of global operating and investment management experience, 
-                Founder and CEO of Corporate Metrix Multi Family Office, Miven Family Office, Miven Venture Partners,
-                Co-founder of Skyline Ventures and Irvine Ventures.<br />
-                <br />
-                            </p>
-                        </div>
-                    </div>
+                	
 
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="wp-block inverse">
                            
                             <h2>Michael Sawitz<small>Founder of Fast Start Studios</small></h2><br/>
@@ -129,7 +118,7 @@
                         </div>
                     </div>
                     
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="wp-block inverse">
                             
                             <h2>Dimitri Villard<small>Executive Committee, Tech Coast Angels</small></h2><br/>
